--- a/src/styles.scss
+++ b/src/styles.scss
@@ -140,6 +140,4 @@ body {
 
 .book-manager .scrollable-content {
   position: relative!important;
-  width: auto!important;
-  margin: auto!important;
 }
